Sun Feb  4 07:55:17 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtksignal.h: removed gtk_signal_init() compat define.

	* gtk/gtktypeutils.[hc]: gtk_tpye_init() take an additional argument
	GTypeDebugFlags debug_flags and pass it on to g_type_init ();
	deprecated this function.

	* gdk/gdk.c (gdk_init_check): call g_type_init () with 0 as
	argument.

Sun Feb  4 07:45:45 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtkdebug.h: nuke GTK_DEBUG_OBJECTS and GTK_DEBUG_SIGNALS.

2001-02-03  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextbtree.c (_gtk_text_btree_tag): Fix bug reported by
	Mikael Hermansson with patch from Mikael (if there was a toggle
	start one after the first character in the range, this function
	was broken). Bug #50380

Sat Feb  3 11:28:03 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Remove confusing comment about X11.

Fri Feb  2 19:21:23 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_propagate_shapes): Surround additional
	regions with HAVE_SHAPE_EXT. (#50511, Eric Ding)
	
Fri Feb  2 18:31:54 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkimage-x11.c: Remove definition of _XOPEN_SOURCE, since
	it breaks things on BSD. If you want to compile GTK+ with
	-ansi -pedantic, you should supply CPP_FLAGS=_XOPEN_SOURCE 
	when configuring, since GTK+ simply can't be "pure ANSI" 
	in the header files it uses. (#8170, Greg Hudson)

2001-02-02  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkwindow.c: docs

	* gtk/gtkwidget.c: docs
	(gtk_widget_set_colormap): add a reference to the colormap
	(gtk_widget_get_default_colormap): add a reference to the colormap

	* gtk/gtktextbtree.c (gtk_text_mark_set_visible): docs

	* gtk/gtktextiter.c: docs

	* gtk/gtkmain.c (gtk_propagate_event): docs

	* gtk/gtkpaned.c (gtk_paned_get_position): docs
	(gtk_paned_set_position): docs

	* gtk/gtktreesortable.h (struct _GtkTreeSortableIface): Initial
	sort interface, no implementation yet.

	* demos/testpixbuf.c (new_testrgb_window): replace