@@ -1,3 +1,9 @@
+2001-02-04  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/gdk.def
+	* gdk/win32/gdkim-win32.c (gdk_ic_attr_new, gdk_ic_attr_destroy):
+	Provide dummy implementations.
+
 Sun Feb  4 07:55:17 2001  Tim Janik  <timj@gtk.org>
 
 	* gtk/gtksignal.h: removed gtk_signal_init() compat define.
